k8s/infra/krakend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krakend
  labels:
    istio-injection: disabled
