k8s/infra/krakend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
  namespace: krakend
  labels:
    app: krakend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: krakend
  type: LoadBalancer
