k8s/infra/krakend/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: krakend
  namespace: krakend
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - "api.krakend.local"
    - "*"
  http:
    - route:
      - destination:
          host: krakend-svc
          port:
            number: 80
